--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,7 +13,13 @@
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
     </head>
-    <body>
-        {% block body %}{% endblock %}
+    <body class="max-h-screen overflow-hidden">
+        <div class="flex">
+            {% include '_sidebar.html.twig' %}
+            <div class="w-10/12">
+                {% block body %}{% endblock %}
+            </div>
+        </div>
     </body>
 </html>
+
